[package]
name = "gam3du-framework-common"
description = "Common types and traits"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
getrandom = { workspace = true, features = ["js"] }
indexmap = { workspace = true, features = ["serde", "std"] }
rand = { workspace = true, features = ["getrandom", "std", "std_rng"] }
serde = { workspace = true, features = ["std", "derive"] }
winit = { workspace = true, default-features = true }

[target.'cfg(target_family = "wasm")'.dependencies]
bincode.workspace = true
tracing.workspace = true
wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }

[lints]
workspace = true
