[package]
name = "launcher-robot"
description = "A simple robot moving across a 2D-plane."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
engine-robot.workspace = true
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
runtime-python.workspace = true

ctrlc.workspace = true
log.workspace = true
pollster.workspace = true
serde_json.workspace = true
winit.workspace = true

[build-dependencies]
gam3du-framework-common.workspace = true
runtime-python-bindgen.workspace = true

serde_json.workspace = true

[lints]
workspace = true
