[package]
name = "lib-ecs-kawogi"
description = "An experimental Entity Component System implementation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
glam.workspace = true
web-time.workspace = true

[lints]
workspace = true
