[package]
name = "lib-wasm-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-rs-shared-channel = { workspace = true, features = [
    "serde",
    "serde-bincode",
] }

[lints]
workspace = true
