[package]
name = "runtime-python"
description = "Python runtimes to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework.workspace = true
runtimes.workspace = true
serde_json.workspace = true
log.workspace = true
rustpython-vm.workspace = true
rustpython.workspace = true

[lints]
workspace = true
