[package]
name = "runtime-python"
description = "Python runtimes to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework-common.workspace = true
tracing.workspace = true
rustpython-vm.workspace = true
rustpython = { workspace = true, features = ["stdlib"] }
runtime-python-bindgen.workspace = true
# either.workspace = true

[lints]
workspace = true
