[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
# The dependencies in this config have no transitive dependencies.
env_logger = { version = "0.11.5", default-features = false }
log = "0.4.22"
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
regex-lite.workspace = true
pico-args = { workspace = true, features = [
    "eq-separator",
    "short-space-opt",
    "combined-flags",
] }
xshell.workspace = true
reqwest = { workspace = true, features = ["blocking"] }

[lints]
workspace = true
