[package]
workspace = "../../../workspace-common"
name = "application-robot-native"
description = "A simple robot moving across a 2D-plane."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
application-robot.workspace = true
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
engine-robot.workspace = true
runtime-python.workspace = true
serde_json.workspace = true
winit = { workspace = true, default-features = true }
tracing.workspace = true
# serde_json = { workspace = true, features = ["std"] }
web-time.workspace = true
lib-file-storage.workspace = true
rustpython.workspace = true
rustpython-vm.workspace = true

[lints]
workspace = true
