[package]
workspace = "../../../workspace-common"
name = "application-robot-native"
description = "A simple robot moving across a 2D-plane."
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
application-robot.workspace = true
engine-robot.workspace = true
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
lib-file-storage.workspace = true
runtime-python.workspace = true
rustpython-vm.workspace = true
rustpython.workspace = true
serde_json.workspace = true
# serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
web-time.workspace = true
wgpu = { workspace  = true, features = ["vulkan", "dx12", "metal"]}
winit = { workspace = true, default-features = true }

[lints]
workspace = true
