[package]
workspace = "../../../workspace-common"
name = "runtime-python-bindgen"
description = "Binding generators for Python runtimes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[dependencies]
gam3du-framework-common.workspace = true

[lints]
workspace = true
