[package]
name = "runtime-python-wasm"
description = "wasm module for Python runtimes to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
# crate-type = ["cdylib"]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.70"
# wasm-rs-shared-channel = { path = ".." }
wasm-rs-dbg = { version = "0.1", default-features = false, features = [
    "console-log",
] }
serde = { version = "1.0.123", features = ["derive"] }
bincode = "1.3.1"
js-sys = "0.3.47"
console_error_panic_hook = "0.1.6"

web-time.workspace = true
# runtime-python.workspace = true
# wasm-bindgen.workspace = true
# rustpython = { workspace = true, features = [] }
# rustpython-vm.workspace = true
# runtime-python-bindgen.workspace = true
# either.workspace = true
# shared_channel = "0.2"
# wasm-rs-dbg = "0.1"
wasm-rs-shared-channel = "0.1"
# serde.workspace = true
# console_error_panic_hook.workspace = true

[lints]
workspace = true
