[package]
name = "runtime-python-wasm"
description = "wasm module for Python runtimes to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
runtime-python.workspace = true

serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
# web-time.workspace = true
rustpython = { workspace = true, features = ["freeze-stdlib", "stdlib"] }
rustpython-vm = { workspace = true, features = ["compiler", "encodings", "serde"] }
# runtime-python-bindgen.workspace = true
# either.workspace = true
# shared_channel = "0.2"
# wasm-rs-dbg = "0.1"
# serde.workspace = true
# console_error_panic_hook.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen.workspace = true
wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }

[lints]
workspace = true
