[package]
workspace = "../../../../workspace-web"
name = "application-robot-web-main"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
application-robot.workspace = true
bincode.workspace = true
engine-robot.workspace = true
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true
runtime-python.workspace = true
rustpython-vm.workspace = true
rustpython.workspace = true
serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
wasm-bindgen = { workspace = true, features = ["serde"] }
wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }
web-sys = { workspace = true, features = ["MessageChannel", "MessageEvent", "MessagePort", "Worker", "WorkerOptions", "WorkerType"] }
web-time.workspace = true
winit = { workspace = true, default-features = true }
