[package]
name = "application-robot-web-runtime-python"
description = "wasm module for Python runtimes to extend and control a gam3du engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gam3du-framework-common.workspace = true
gam3du-framework.workspace = true

bincode.workspace = true
runtime-python.workspace = true
rustpython = { workspace = true, features = ["freeze-stdlib", "stdlib"] }
rustpython-vm = { workspace = true, features = ["compiler", "encodings", "serde"] }
serde_json = { workspace = true, features = ["std"] }
tracing.workspace = true
wasm-bindgen.workspace = true
wasm-rs-shared-channel = { workspace = true, features = ["serde", "serde-bincode"] }
web-sys = { workspace = true, features = ["DedicatedWorkerGlobalScope"] }

[lints]
workspace = true
